--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="styles.css">
 		<title>BMI Calculator</title>
-	</head>
-	
-	<script src="style.js" type="text/javascript"></script>
+	</head>	
 	<body>
 		<div>
 			<h2>BMI Calculator</h2>
@@ -15,8 +13,9 @@
 			<p class="text">Weight</p>
 			<input type="text" id="w">
 			<p id="result"></p>
-			<button id="btn" onClick="BMI()">Calculate</button>
+			<button id="btn">Calculate</button>
 			<p id="info">Please enter height [cm] and weight [kg]</p>
 		</div>
+		<script src="style.js" type="text/javascript"></script>
 	</body>
 </html>
